--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "firebase-testing",
+  "name": "madfut-galore-bot1",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "npx swc src -d dist && node dist/index",
     "start-tsc": "npx tsc && node dist/index",
     "compile": "npx tsc"
   },
-  "author": "",
+  "author": "callumdo4 tiktok password",
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
     "eris": "^0.16.0",
+    "exprss": "^0.0.1-security",
     "firebase": "^9.4.1",
     "sqlite3": "git+https://github.com/mapbox/node-sqlite3.git#593c9d"
   },
@@ -22,5 +22,9 @@
     "@tsconfig/node14": "^1.0.1",
     "@types/sqlite3": "^3.1.7",
     "typescript": "^4.4.4"
-  }
+  },
+  "keywords": [
+    "heroku"
+  ],
+  "description": ""
 }
